# who-unfollowed-me

./: .flake8  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HACKING.md  README.md  beautify.py  cli.py  pyproject.toml  requirements.txt  setup.py  test.py  unfollow  unfollow.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: black.yml  flake8.yml  publish-on-release.yml
media/: test  test2  test3
src/: beautify.py  cli.py
src/unfollow/: beautify.py  cli.py  config.py  input.py  unfollow.py  version.py
unfollow/: beautify.py  cli.py  config.py  input.py  unfollow.py
