[tool.poetry]
name = "who-unfollowed-me"
version = "2.0.0"
description = "😡 Python CLI tool that shows you who has unfollowed you on GitHub"
authors = ["TechWiz-3 <programmingplus1@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "unfollow"}]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^12.6.0"
requests = "^2.28.1"
toml = "^0.10.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
unfollow = "unfollow.cli:main"
